@startuml

title Login Flow

[*] --> Prompt

Prompt --> Authenticate
Prompt --> ForgotPass
Prompt -> EnterAccountInfo
Prompt -> Prompt
Prompt: String?

Authenticate -> Prompt
Authenticate: Credentials

ForgotPass --> Prompt
ForgotPass: String
EnterAccountInfo --> CreateAccount
EnterAccountInfo --> Prompt

CreateAccount: User
CreateAccount --> Authenticate
CreateAccount --> EnterAccountInfo

EnterAccountInfo: String?

note "This is a note about login" as N1
note left of Prompt
    This is where the
    login screen goes
end note

Authenticate -> [*]: OAuthToken
@enduml
